Upgrade to version 0.2
* Change status icon

* GUI fixes

* Add more item info

* code refactor part 1

* q

* refactor part 2

* refactor part 3

* Refactor part 4

* End of refactor

* Todo update

* fix build